Seamless iframe should not announce a new browsing context https://bugs.webkit.org/show_bug.cgi?id=86317

Reviewed by Eric Seidel.

Source/WebCore:

Introduce a new role for seamless frames so that the platforms can decide what to do
with this kind of object. For the mac, it's exposed as a group.

Test: platform/mac/accessibility/seamless-iframe.html

* accessibility/AccessibilityNodeObject.cpp:
(WebCore):
* accessibility/AccessibilityNodeObject.h:
(AccessibilityNodeObject):
* accessibility/AccessibilityObject.h:
(WebCore::AccessibilityObject::isWebArea):
(WebCore::AccessibilityObject::isSeamlessWebArea):
* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::parentObjectIfExists):
(WebCore::AccessibilityRenderObject::parentObject):
(WebCore::AccessibilityRenderObject::boundingBoxRect):
(WebCore::AccessibilityRenderObject::accessibilityIsIgnored):
(WebCore::AccessibilityRenderObject::determineAccessibilityRole):
* accessibility/mac/WebAccessibilityObjectWrapper.mm:
(createAccessibilityRoleMap):

Source/WebKit/chromium:

* public/WebAccessibilityRole.h:
* src/AssertMatchingEnums.cpp:

LayoutTests:

* platform/mac/accessibility/seamless-iframe-expected.txt: Added.
* platform/mac/accessibility/seamless-iframe.html: Added.



Canonical link: https://commits.webkit.org/123473@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137962 268f45cc-cd09-0410-ab3c-d52691b4dbfc